# forecasting-and-time-series-analysis

./: 1. Introduction.ipynb  2. Decomposition.ipynb  README.md  colorsetup.py  pyproject.toml
pandas_timeseries/: 06a_LAB_Pandas_TimeSeries.ipynb  code.ipynb
