[tool.poetry]
name = "forecasting-and-time-series-analysis"
version = "0.1.0"
description = ""
authors = ["theofilusarifin <theofilusarifin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
