[tool.poetry]
name = "forecasting-and-time-series-analysis"
version = "0.1.0"
description = ""
authors = ["theofilusarifin <theofilusarifin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
ipynb = "^0.5.1"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
xlrd = "^2.0.1"
scipy = "^1.14.1"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
